fixes on scroll revert invert ing logo invert conf logo white space none
small powered by color fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,7 +15,7 @@
     padding-top: 1em;
 }
 .navbar-2nd-logo p {
-    color: #fff;
+    color: rgba(255, 255, 255, 0.5);
     font-size: .5em;   
     text-align: right;
     line-height: 120%;
@@ -27,8 +27,17 @@
     padding-left: 12px;
 }
 .navbar-fixed-top .navbar-2nd-logo p {
-    color: #000;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.navbar-fixed-top .navbar-brand {
+    white-space: nowrap;
+    margin-left: -30px;
+}
+
+.navbar-fixed-top .navbar-brand img {
+    filter: invert(100%);
 }
 .navbar-fixed-top .navbar-2nd-logo img {
-    filter: invert(100%);
+    /* filter: invert(100%); */
 }
